--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
-  "engines": {
-    "node": "22.17.0"
-  },
   "name": "majorproject",
   "version": "1.0.0",
+  "description": "",
+  "keywords": [],
+  "homepage": "https://github.com/nobita0918/nobita0918#readme",
+  "bugs": {
+    "url": "https://github.com/nobita0918/nobita0918/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nobita0918/nobita0918.git"
+  },
+  "license": "ISC",
+  "author": "ANURAG",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "ANURAG",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
@@ -30,14 +37,7 @@
     "passport-local-mongoose": "^8.0.0"
   },
   "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nobita0918/nobita0918.git"
-  },
-  "keywords": [],
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/nobita0918/nobita0918/issues"
-  },
-  "homepage": "https://github.com/nobita0918/nobita0918#readme"
+  "engines": {
+    "node": "22.17.0"
+  }
 }
